# genie

./: .gitignore  .prettierignore  Makefile  README.md  ReadMe.txt  Skill.interaction.model  Skill.interaction.model.json  eslint.config.js  index.js  jsconfig.json  package-lock.json  package.json
.husky/: pre-commit
EC2/: .env.template  README.MD  index.js  package-lock.json  package.json
Lambda/: index.js  package-lock.json  package.json
api/: .dockerignore  Dockerfile  Makefile  README.MD  index.js  jsconfig.json  package-lock.json  package.json  server-start.sh
mycroft-precise/: README.md  SNAPCRAFT.md  pyvenv.cfg  requirements.txt  setup.py  setup.sh
roommitra-widget/: package.json
scripts/: setup-husky.sh
selfHostedAmazonDocs/: index.js  package-lock.json  package.json
staff-app/: .env.development  README.md  app.config.js  package-lock.json  package.json
terraform/: backend.tf  iam.tf  main.tf  outputs.tf  s3.tf  user_data.sh  variables.tf
voice_assistant_android/: build.gradle  local.properties  settings.gradle
voice_assistant_android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
webapp/: .env.development  .gitignore  Dockerfile  jsconfig.json  next.config.mjs  package-lock.json  package.json  pp.txt  server-start.sh  tsconfig.json  vercel.json
webapp2/: Dockerfile  package-lock.json  package.json  pp.txt  tailwind.config.ts  tsconfig.json
website/: .dockerignore  Dockerfile  appspec.yml  package-lock.json  package.json  pp.txt  server-start.sh  tailwind.config.js
website2/: babel.config.js  package-lock.json  package.json
(+741 files in other folders)
